gcc/testsuite/rust/rustc/ui/suggestions/type-ascription-instead-of-variant.rs
// run-rustfix
fn main() {
    let _ = Option:Some("");
// { dg-error "" "" { target *-*-* } .-1 }
}

